k8objects-main/k8objects-main/ingress/services/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: studentapp
            port: 
              number: 8080
